qcounter: Update icons.

--- a/qcounter.desktop
+++ b/qcounter.desktop
@@ -2,7 +2,7 @@
 Name=Quick Random Counter
 Comment=Random card drawing and display software
 Exec=qcounter
-Icon=qcounter.png
+Icon=qcounter_48x48.png
 Categories=Graphics
 Terminal=false
 Type=Application
